<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="write"
        android:enabled="true"
        android:icon="@drawable/ic_sc_write"
        android:shortcutShortLabel="@string/sc_write"
        android:shortcutLongLabel="@string/sc_write_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booknest://write"
            android:targetPackage="com.nogroup.booknest"
            android:targetClass="com.nogroup.booknest.MainActivity"/>
    </shortcut>
    <shortcut
        android:shortcutId="word"
        android:enabled="true"
        android:icon="@drawable/ic_sc_book"
        android:shortcutShortLabel="@string/sc_word"
        android:shortcutLongLabel="@string/sc_word_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booknest://word"
            android:targetPackage="com.nogroup.booknest"
            android:targetClass="com.nogroup.booknest.MainActivity"/>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_sc_search"
        android:shortcutShortLabel="@string/sc_search"
        android:shortcutLongLabel="@string/sc_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booknest://search"
            android:targetPackage="com.nogroup.booknest"
            android:targetClass="com.nogroup.booknest.MainActivity"/>
    </shortcut>
    <shortcut
        android:shortcutId="wallet"
        android:enabled="true"
        android:icon="@drawable/ic_sc_wallet"
        android:shortcutShortLabel="@string/sc_wallet"
        android:shortcutLongLabel="@string/sc_wallet_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="booknest://wallet"
            android:targetPackage="com.nogroup.booknest"
            android:targetClass="com.nogroup.booknest.MainActivity"/>
    </shortcut>
</shortcuts>
